@@ -1,4 +1,5 @@
 forces-and-motion-basics.name=Forces and Motion: Basics
+acceleration=Acceleration
 motion=Motion
 friction=Friction
 forceReadout.pattern={0}N
