@@ -1,3 +1,4 @@
+Added accelerometer tab and check box
 # 1.00.00 (69441) Oct 23, 2012
 Updated screenshot again to remove developer menu and added credits
 Updated screenshot
